# GitmeRiz-API

./: .env.example  .gitignore  BACKGROUND_PROCESSING_DESIGN.md  Cargo.toml  DOCS_README.md  FRONTEND_INTEGRATION_GUIDE.md  OPTIMIZATION_ROADMAP.md  PR_SUMMARY.md  README.md  issue.md
api-docs/: README.md  audio.md  authentication.md  blog.md  clipboard.md  conventions.md  endpoint-summary.md  gallery.md  health.md  notes.md  users.md  video.md
src/: auth.rs  config.rs  db.rs  error_page.rs  main.rs  media.rs  middleware.rs  models.rs  validation.rs
src/handlers/: audio.rs  blog.rs  clipboard.rs  gallery.rs  health.rs  mod.rs  notes.rs  users.rs  video.rs
