[package]
name = "gitmeriz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP middleware (logging, CORS)
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tower-cookies = "0.11"
# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Password hashing
bcrypt = "0.17"
# JWT
jsonwebtoken = "9"
# MySQL database (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
# Environment variables
dotenvy = "0.15"
# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Random number generation
rand = "0.8"
# Image processing
image = "0.25"
webp = "0.3"
